# swiss_traffic_pipeline

./: .bruin.yml  .dockerignore  .gitignore  Annual_results_ Measuring_station_2025.csv  Annual_results_ Measuring_station_adtwithclasses2025.csv  Annual_results_ Measuring_station_legend2025.csv  Annual_results_2025.csv  Dockerfile  LOOKER_STUDIO.md  PROMPT.md  README.md  check_csv.py  check_schema.py  docker-compose.yml  pipeline.yml  pyproject.toml  run_pipeline.py
analyses/: data_quality_check.sql
assets/ml/: evaluate_model.py  predict_traffic.py  train_model.py
assets/raw/: ingest_traffic_csv.py
assets/reporting/: export_looker_studio.py  generate_reports.py
assets/staging/: stg_monthly_traffic.sql  stg_stations.sql
assets/transform/: lausanne_analysis.sql  romandy_summary.sql  traffic_features.sql
models/: .gitkeep
reports/: .gitkeep  feature_importance.csv  predictions_romandy.csv  quality_gates.json  training_metrics.json
